ratelimit-service/tests/fixtures/dest-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: public-gateway-lb
spec:
  host: public-gateway-istio.__NAMESPACE__.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
